<resources>
    <string name="app_name">计量管理系统</string>
    <string name="mine">我的</string>
    <string name="device">设备</string>
    <string name="Home">首页</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">确定</string>
    <string name="complete">完成</string>
    <string name="print">打印</string>
    <string name="login">登录</string>
    <string name="input_password">请输入密码</string>
    <string name="input_account">请输入账号</string>
    <string name="carry_on">继续</string>
    <string name="scan_tip1">将二维码放入框中，即可自动扫描</string>
    <string name="scan">扫描</string>
    <string name="Scan_container_code">扫描货柜码</string>
    <string name="Current_container">当前货柜:</string>
    <string name="start_scan_device">开始扫描设备</string>
    <string name="Rescan_container_code">重新扫描货柜码</string>
    <string name="dept_type">科室分类</string>
    <string name="sort">分类</string>
    <string name="status">状态</string>
    <string name="leader">负责人</string>
    <string name="dept_name">部门名称</string>
    <string name="dept">部门：</string>
    <string name="phone">手机：</string>
    <string name="create_time">创建时间：</string>
    <string name="user_name">用户名称：</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="reset">重置</string>
    <string name="username">用户名称：</string>
    <string name="sex">用户性别：</string>
    <string name="owner_dept">归属部门：</string>
    <string name="phone_num">手机号码:</string>
    <string name="email">邮箱：</string>
    <string name="login_accout">登录账号：</string>
    <string name="user_status">用户状态：</string>
    <string name="role">角色：</string>
    <string name="remark">备注：</string>
    <string name="canecl">取消</string>
    <string name="login_pwd">登录密码：</string>
    <string name="device_type_name">设备类型名称：</string>
    <string name="owner_device_classify">所属设备分类:</string>
    <string name="container_name">货柜名称：</string>
    <string name="container_num">货柜层数：</string>
    <string name="Generate_container_code">生成货柜码</string>
    <string name="connect">连接</string>
    <string name="qrcode_print">二维码打印</string>
    <string name="blue_tooth_connect">蓝牙连接</string>
    <string name="bluetooth_is_not_enabled">蓝牙没有开启</string>
    <string name="str_title_pairedev">已配对</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="select_bluetooth_device">选择蓝牙设备</string>
    <string name="none_bluetooth_device_found">没有找到蓝牙设备</string>
    <string name="str_title_newdev">未配对</string>
    <string name="str_printer_conn_normal">打印机连接正常</string>
    <string name="str_printer_out_of_paper">打印机缺纸</string>
    <string name="str_printer_open_cover">打印机开盖</string>
    <string name="str_printer_error">打印机出错</string>
    <string name="str_printer_printmode_esc">打印模式:ESC</string>
    <string name="str_printer_printmode_tsc">打印模式:CPCL</string>
    <string name="str_printer_printmode_cpcl">打印模式:CPCL</string>
    <string name="str_disconnect_success">成功断开连接</string>
    <string name="str_choice_printer_command">请选择正确的打印机指令</string>
    <string name="str_cann_printer">请先连接打印机</string>
    <string name="str_conn_state_disconnect">连接状态：未连接</string>
    <string name="str_conn_state_connecting">连接状态：连接中</string>
    <string name="str_conn_state_connected">连接状态：已连接</string>
    <string name="device_name">设备名称：</string>
    <string name="device_no">厂家编号(sn)：</string>
    <string name="Technical_Parameters">技术参数：</string>
    <string name="location">所在位置：</string>
    <string name="factory">厂家：</string>
    <string name="statu">仪器状态：</string>
    <string name="principal">负责人:</string>
    <string name="Technical_status">技术状态:</string>
    <string name="classification">分类:</string>
    <string name="Verification_cycle">检定周期:</string>
    <string name="Recent_verification_date">最近检定日期:</string>
    <string name="Validity_period">检定有效期:</string>
    <string name="Add_new_account">新增建账入库</string>
    <string name="borrow">借用</string>
    <string name="change_assword">修改密码</string>
    <string name="sign_out">退出登录</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="more">更多</string>
    <string name="Identity">身份：</string>
    <string name="Contact_information">联系方式：</string>
    <string name="borrow_return">借还</string>
    <string name="new_inventory_task">新建盘点任务</string>
    <string name="inventory_task_name">盘点任务名称：</string>
    <string name="continues">继续</string>
    <string name="save">保存</string>
    <string name="buy_time">购置时间：</string>
    <string name="by">通过</string>
    <string name="no_by">不通过</string>
    <string name="login_name">登录名称:</string>
    <string name="Review">审核</string>
    <string name="input">请输入(设备名称/sn)</string>
</resources>
