<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">


    <EditText
        android:id="@+id/et_username_phone_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="64dp"
        android:drawableStart="@mipmap/login_phone"
        android:drawablePadding="9dp"
        android:hint="@string/input_account"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/app_color_description"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:drawableStart="@mipmap/login_pwd"
        android:drawablePadding="9dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/app_color_description"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username_phone_email" />

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/login"
        android:textColor="@color/app_color_description"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

</androidx.constraintlayout.widget.ConstraintLayout>

