<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@color/qmui_config_color_background"
        app:layout_constraintBottom_toTopOf="@id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar">

        <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
            android:id="@+id/groupListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/round_bg"
        android:gravity="center"
        android:text="@string/canecl"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/round_bg"
        android:gravity="center"
        android:text="@string/continues"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/round_bg"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView16" />


</androidx.constraintlayout.widget.ConstraintLayout>